# bootit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  command.rs  config.rs  main.rs  util.rs
src/command/: allow_non_admin.rs
