[package]
name = "bootit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from", "into", "from_str", "add"] }
dirs = "6.0.0"
efivar = "2.0.0"
inquire = "0.9.2"
libc = "0.2.180"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
system_shutdown = "4.1.0"
which = "8.0.0"
